# mason-til-utils

./: .gitignore  pyproject.toml
masontilutils/: __init__.py  db.py  utils.py
masontilutils/api/: __init__.py  chatgpt.py  check_emails.py  deepseek.py  duckduckgo.py  enums.py  perplexity.py  queries.py
masontilutils/api/chatgpt/: __init__.py  base.py  ethgen.py  industry.py
masontilutils/api/deepseek/: __init__.py  base.py  description.py  naics.py
masontilutils/api/duckduckgo/: __init__.py  base.py  linkedin.py
masontilutils/api/perplexity/: __init__.py  base.py  description.py  email.py  executive.py  naics.py
masontilutils/api/queries/: __init__.py  email.py  enums.py  ethgen.py  industry.py  perplexity.py
masontilutils/api/requests/: __init__.py
masontilutils/api/responses/: __init__.py
masontilutils/handler/ethgen/: linkedin_ethgen_handler.py
masontilutils/service/ethgen/: linkedin_ethgen_service.py
masontilutils/services/: __init__.py
masontilutils/services/ethgen/: __init__.py  linkedin_ethgen_service.py
masontilutils/tests/: test_business_desc_api.py  test_chatgpt_ethgen.py  test_executive_api.py  test_linkedin_api.py  test_naics_code_api.py  test_perplexity_email_api.py
masontilutils/tests/test_api/: test_chatgpt_ethgen.py  test_duckduckgo_api.py  test_ethgen.py  test_executive.py  test_executive_api.py  test_industry.py  test_linkedin_api.py  test_perplexity_email_api.py
masontilutils/tests/test_handler/: __init__.py  test_db.accdb  test_linkedin_ethgen_handler.py
masontilutils/tests/test_images/: README.md
(+9 files in other folders)
